--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hydromine-quebec</title>
+
+    <!-- 🪙 Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- 🏷️ Titre & Description -->
+    <title>HydroMine Québec – Minage de Bitcoin Écologique par Énergie Hydroélectrique</title>
+    <meta
+      name="description"
+      content="HydroMine Québec propose une solution de minage Bitcoin 100 % écologique grâce à l’énergie hydroélectrique. Rentabilité, durabilité et innovation au service de la blockchain verte."
+    />
+
+    <!-- 🌐 Balises Open Graph (SEO & réseaux sociaux) -->
+    <meta property="og:title" content="HydroMine Québec – Minage Bitcoin Écologique" />
+    <meta
+      property="og:description"
+      content="Minage Bitcoin durable et 100 % vert grâce à l’énergie hydroélectrique. Rejoignez l’aventure HydroMine Québec pour un futur crypto responsable."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hydromine.netlify.app/" />
+    <meta property="og:image" content="/" />
+
+    <!-- 📱 Icônes pour mobile -->
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- 🧠 SEO supplémentaires -->
+    <meta name="keywords" content="hydromine, bitcoin, minage écologique, énergie hydroélectrique, québec, crypto verte, mining vert, blockchain durable" />
+    <meta name="author" content="HydroMine Québec" />
   </head>
-  <body>
+
+  <body class="bg-slate-900 text-white">
     <div id="app"></div>
+
+    <!-- ⚙️ Entrée du projet Vue/Vite -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
