--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- 🪙 Favicon -->
+    <!-- 🐼 Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- 🏷️ Titre & Description -->
-    <title>HydroMine Québec – Minage de Bitcoin Écologique par Énergie Hydroélectrique</title>
+    <title>Panda Palmonia – Investis en nature avec la puissance de la blockchain</title>
     <meta
       name="description"
-      content="HydroMine Québec propose une solution de minage Bitcoin 100 % écologique grâce à l’énergie hydroélectrique. Rentabilité, durabilité et innovation au service de la blockchain verte."
+      content="Panda Palmonia te permet d’investir en crypto pour faire pousser des arbres numériques uniques — les Palmonia — qui te génèrent une rente tout en soutenant la sauvegarde des pandas."
     />
 
     <!-- 🌐 Balises Open Graph (SEO & réseaux sociaux) -->
-    <meta property="og:title" content="HydroMine Québec – Minage Bitcoin Écologique" />
+    <meta property="og:title" content="Panda Palmonia – Investis en nature grâce à la blockchain" />
     <meta
       property="og:description"
-      content="Minage Bitcoin durable et 100 % vert grâce à l’énergie hydroélectrique. Rejoignez l’aventure HydroMine Québec pour un futur crypto responsable."
+      content="Crée ton Palmonia, fais-le pousser grâce à la crypto et récolte une rente à chaque vente. 50 % des bénéfices sont reversés à la préservation des pandas. 🌿🐼"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hydromine.netlify.app/" />
+    <meta property="og:url" content="https://pandapalmonia.com/" />
     <meta property="og:image" content="/public/assets/logo.png" />
 
     <!-- 📱 Icônes pour mobile -->
     <link rel="apple-touch-icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="theme-color" content="#1b0f29" />
 
     <!-- 🧠 SEO supplémentaires -->
-    <meta name="keywords" content="hydromine, bitcoin, minage écologique, énergie hydroélectrique, québec, crypto verte, mining vert, blockchain durable" />
-    <meta name="author" content="HydroMine Québec" />
+    <meta
+      name="keywords"
+      content="panda palmonia, crypto verte, investissement écologique, arbres numériques, rente blockchain, nft écologique, projet durable, sauvegarde pandas, investissement vert"
+    />
+    <meta name="author" content="Panda Palmonia" />
   </head>
 
-  <body class="bg-slate-900 text-white">
+  <body class="bg-gradient-to-b from-slate-900 to-purple-900 text-white font-sans">
     <div id="app"></div>
 
     <!-- ⚙️ Entrée du projet Vue/Vite -->
