Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- 🐼 Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
 
     <!-- 🏷️ Titre & Description -->
-    <title>Panda Palmonia – Investis en nature avec la puissance de la blockchain</title>
+    <title>Panda paulownia – Investis en nature avec la puissance de la blockchain</title>
     <meta
       name="description"
-      content="Panda Palmonia te permet d’investir en crypto pour faire pousser des arbres numériques uniques — les Palmonia — qui te génèrent une rente tout en soutenant la sauvegarde des pandas."
+      content="Panda paulownia te permet d’investir en crypto pour faire pousser des arbres numériques uniques — les paulownia — qui te génèrent une rente tout en soutenant la sauvegarde des pandas."
     />
 
     <!-- 🌐 Balises Open Graph (SEO & réseaux sociaux) -->
-    <meta property="og:title" content="Panda Palmonia – Investis en nature grâce à la blockchain" />
+    <meta property="og:title" content="Panda paulownia – Investis en nature grâce à la blockchain" />
     <meta
       property="og:description"
-      content="Crée ton Palmonia, fais-le pousser grâce à la crypto et récolte une rente à chaque vente. 50 % des bénéfices sont reversés à la préservation des pandas. 🌿🐼"
+      content="Crée ton paulownia, fais-le pousser grâce à la crypto et récolte une rente à chaque vente. 50 % des bénéfices sont reversés à la préservation des pandas. 🌿🐼"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pandapalmonia.com/" />
+    <meta property="og:url" content="https://pandapaulownia.netlify.app/" />
     <meta property="og:image" content="/public/assets/logo.png" />
 
     <!-- 📱 Icônes pour mobile -->
@@ -31,9 +31,9 @@
     <!-- 🧠 SEO supplémentaires -->
     <meta
       name="keywords"
-      content="panda palmonia, crypto verte, investissement écologique, arbres numériques, rente blockchain, nft écologique, projet durable, sauvegarde pandas, investissement vert"
+      content="panda paulownia, crypto verte, investissement écologique, arbres numériques, rente blockchain, nft écologique, projet durable, sauvegarde pandas, investissement vert"
     />
-    <meta name="author" content="Panda Palmonia" />
+    <meta name="author" content="Panda paulownia" />
   </head>
 
   <body class="bg-gradient-to-b from-slate-900 to-purple-900 text-white font-sans">
