--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pandapaulownia.netlify.app/" />
-    <meta property="og:image" content="/public/assets/logo.png" />
+    <meta property="og:image" content="/public/assets/logoPanda.png" />
 
     <!-- 📱 Icônes pour mobile -->
     <link rel="apple-touch-icon" href="/favicon.ico" />
